--- a/results.html
+++ b/results.html
@@ -7,15 +7,15 @@ START: results.html
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONIX — Results</title>
-  <meta name="description" content="Real outcomes from acquisition + follow-up systems. Book a call to see if ONIX fits your business." />
+  <meta name="description" content="Proof, stats, testimonials, and the team behind ONIX." />
 
-  <link rel="icon" href="./logo2.png?v=20260113-02" />
+  <link rel="icon" href="./logo2.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./styles.css?v=20260113-04">
+  <link rel="stylesheet" href="./styles.css?v=20260113-01">
 </head>
 
 <body>
@@ -57,94 +57,57 @@ START: results.html
 
   <main>
     <!-- RESULTS HERO -->
-    <section class="results-hero section watch-section" id="results-hero">
+    <section class="results-hero section watch-section" id="resultsHero">
       <div class="container results-grid">
         <div class="results-left">
           <div class="pill reveal">
             <span class="dot"></span>
-            Proven systems. Measurable outcomes.
+            Results across multiple local markets
           </div>
 
-          <h1 class="h1 reveal">Results that compound.</h1>
+          <h1 class="h1 reveal">Results</h1>
 
           <p class="subhead reveal" style="--d:120ms">
-            We don’t just generate leads — we build end-to-end acquisition + follow-up systems that lift booked calls and improve close rate.
+            A track record in lead generation + conversion systems — built to book calls and drive revenue.
           </p>
 
-          <!-- STATS (static headline) -->
-          <div class="stats-row reveal" style="--d:200ms">
+          <div class="stats-row reveal" style="--d:220ms" aria-label="Key stats">
             <div class="stat glass">
-              <div class="stat-top"><div class="stat-k">Ad Spend Managed</div></div>
+              <div class="stat-k">Ad spend</div>
               <div class="stat-v">$14M</div>
-              <div class="stat-s">Across multiple industries</div>
+              <div class="stat-s">Managed for clients</div>
             </div>
-
             <div class="stat glass">
-              <div class="stat-top"><div class="stat-k">Revenue Generated</div></div>
+              <div class="stat-k">Revenue generated</div>
               <div class="stat-v">$150M</div>
-              <div class="stat-s">Attributed outcomes for clients</div>
+              <div class="stat-s">Attributed client revenue</div>
             </div>
-
             <div class="stat glass">
-              <div class="stat-top"><div class="stat-k">Clients Served</div></div>
+              <div class="stat-k">Clients</div>
               <div class="stat-v">1000+</div>
-              <div class="stat-s">Local business + tradies</div>
-            </div>
-          </div>
-
-          <!-- COUNTERS (RESTORED / ADDED) -->
-          <section class="counter-section reveal" style="--d:260ms" aria-label="Animated counters">
-            <div class="counter-grid">
-              <div class="counter glass">
-                <div class="counter-k">Spend managed</div>
-                <div class="counter-v" data-count="14000000" data-count-format="compactMoney">$14M</div>
-              </div>
-              <div class="counter glass">
-                <div class="counter-k">Revenue generated</div>
-                <div class="counter-v" data-count="150000000" data-count-format="compactMoney">$150M</div>
-              </div>
-              <div class="counter glass">
-                <div class="counter-k">Clients served</div>
-                <div class="counter-v" data-count="1000" data-count-format="plus">1000+</div>
-              </div>
-            </div>
-          </section>
-
-          <div class="quotes reveal" style="--d:320ms">
-            <div class="quote glass">
-              <p>“We finally stopped chasing leads. Calls started booking consistently — and we could focus on quoting and delivery.”</p>
-              <div class="quote-by">— Trade business owner</div>
-            </div>
-            <div class="quote glass">
-              <p>“The follow-up system is the difference. The pipeline is clean, and we know exactly what to do each day.”</p>
-              <div class="quote-by">— Local service operator</div>
-            </div>
-            <div class="quote glass">
-              <p>“Booked calls went up, lead quality improved, and the reporting made decisions easy.”</p>
-              <div class="quote-by">— Agency partner</div>
+              <div class="stat-s">Served across markets</div>
             </div>
           </div>
         </div>
 
-        <aside class="embed-card glass reveal" style="--d:160ms">
-          <div class="embed-card-top">
-            <div>
-              <div class="kicker">BOOK</div>
-              <div class="dash-title">See if you’re a fit</div>
+        <aside class="results-right reveal" style="--d:180ms">
+          <div class="embed-card glass">
+            <div class="embed-card-top">
+              <div>
+                <div class="kicker">BOOK</div>
+                <div class="dash-title">Pick a time</div>
+              </div>
+            </div>
+            <div class="embed-wrap">
+              <iframe
+                class="calendly"
+                title="Calendly booking"
+                src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
-
-          <div class="embed-wrap">
-            <iframe
-              class="calendly"
-              title="Calendly booking"
-              src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-
-          <div class="embed-note">Prefer email? sales@onixmrkt.com</div>
         </aside>
       </div>
     </section>
@@ -154,74 +117,172 @@ START: results.html
       <div class="container">
         <div class="section-head reveal">
           <div class="eyebrow">ABOUT</div>
-          <h2 class="h2">Who’s behind ONIX.</h2>
-          <p class="p">We’re My Reno Quotes — founded in 2024 to help tradies grow without the hassle. ONIX is our higher-intent, strategy-led system for businesses ready to scale with qualified demand.</p>
+          <h2 class="h2">The team behind ONIX.</h2>
+          <p class="p">
+            We’re My Reno Quotes, founded in 2024 with the goal of helping Tradies grow without all the hassle.
+            With a team of 20 expert marketers, we specialise in Meta, Google, and high-performance acquisition systems.
+            Our team operates out of Auckland, Tauranga, and around the world.
+          </p>
         </div>
 
         <div class="about-grid">
-          <!-- Jordan with image -->
           <article class="about-card glass reveal">
-            <div class="about-person">
-              <div class="about-avatar">
-                <img src="./jordan.jpeg" alt="Jordan Burkett" loading="lazy"
-                     onerror="this.closest('.about-avatar').classList.add('is-missing'); this.remove();">
-                <div class="avatar-fallback">Jordan</div>
-              </div>
-
-              <div class="about-meta">
-                <div class="about-top">
-                  <div class="about-name">Jordan Burkett</div>
-                  <div class="about-role">(co-founder)</div>
-                </div>
-                <ul class="about-list">
-                  <li>Worked closely with 200+ local business and tradie clients</li>
-                  <li>Built and managed 1–1 marketing systems for the past 2 years</li>
-                  <li>Together, we’ve managed $7.8M+ in annual ad spend</li>
-                </ul>
+            <div class="about-top">
+              <img class="about-photo" src="./jordan.jpeg" alt="Jordan Burkett" loading="lazy" onerror="this.style.display='none'">
+              <div>
+                <div class="about-name">Jordan Burkett</div>
+                <div class="about-role">(co-founder)</div>
               </div>
             </div>
+            <ul class="about-list">
+              <li>Worked closely with 200+ clients in local business + tradies</li>
+              <li>Setting up & managing 1–1 marketing systems for 2+ years</li>
+              <li>Together, managed $7.8m+ in annual ad spend</li>
+            </ul>
           </article>
 
           <article class="about-card glass reveal" style="--d:120ms">
             <div class="about-top">
-              <div class="about-name">Sean McArthur</div>
-              <div class="about-role">(co-founder)</div>
+              <div class="about-photo ph" aria-hidden="true"></div>
+              <div>
+                <div class="about-name">Sean McArthur</div>
+                <div class="about-role">(co-founder)</div>
+              </div>
             </div>
             <ul class="about-list">
-              <li>Marketing Finance Manager at eBay UK (managed $100M USD budget)</li>
-              <li>Chief Financial Officer @ Gartshore NZ ($20–25M turnover)</li>
-              <li>Now runs a $5M+ marketing agency in pay-per-lead across industries</li>
+              <li>Marketing Finance Manager at eBay UK — $100m USD budget</li>
+              <li>Chief Financial Officer @ Gartshore NZ — $20–25m turnover</li>
+              <li>Runs a $5m+ marketing agency in pay-per-lead across industries</li>
             </ul>
           </article>
+        </div>
 
-          <article class="about-story glass reveal" style="--d:220ms">
-            <div class="about-story-title">Why ONIX exists</div>
-            <p class="p">
-              My Reno Quotes still runs and still works — it’s perfect if you just need a handful of leads on a small budget.
-              But once you’re past that stage, you need more than “more leads”.
-            </p>
-            <p class="p">
-              ONIX is for operators who want a real strategy, higher-quality enquiries, and less time qualifying leads —
-              so you can focus on closing quotes, managing your team, and scaling.
-            </p>
-            <p class="p">
-              If you’re only looking to spend around $1,000 or less and just want a few leads, ONIX likely isn’t the fit —
-              and we’ll point you to the PPL side instead.
-            </p>
+        <div class="note-card glass reveal" style="--d:180ms">
+          <h3>Why ONIX exists (and who it’s for)</h3>
+          <p class="p">
+            My Reno Quotes is still running and still works — but ONIX was built for businesses that are past “just needing a few leads”.
+            If you want a proper strategy, highly qualified leads, and to spend less time qualifying so you can focus on closing, managing, and scaling —
+            this is for you. If you only need a few leads on a ~$1,000/month budget (or less), you’re likely better suited to the PPL side.
+          </p>
+          <a class="btn btn-primary" href="./index.html#book">Book a Call</a>
+        </div>
+      </div>
+    </section>
 
-            <div class="team-strip">
-              <span class="chip">Team of 20 expert marketers</span>
-              <span class="chip">Meta + Google specialists</span>
-              <span class="chip">Based in Auckland + Tauranga + remote</span>
+    <!-- TESTIMONIALS (all) -->
+    <section class="section watch-section" id="resultsTestimonials">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">TESTIMONIALS</div>
+          <h2 class="h2">What clients say.</h2>
+          <p class="p">Image placeholders included — swap them with your own later.</p>
+        </div>
+
+        <div class="t-grid">
+          <article class="t-card glass reveal">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Nicky M.</div>
+                <div class="t-role">No1 Real Estate Agent — West Auckland</div>
+              </div>
             </div>
+            <p class="t-quote">“John’s leads and system have given us an extra $100k on our bottom line year on year.”</p>
+          </article>
 
-            <a class="btn btn-primary btn-lg" href="./index.html#book">Book a 15-minute call</a>
+          <article class="t-card glass reveal" style="--d:80ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Carolyn M.</div>
+                <div class="t-role">Real Estate Agent — Napier</div>
+              </div>
+            </div>
+            <p class="t-quote">“John is a sharp, smart mover who gets things done. He is always one step ahead…”</p>
+          </article>
+
+          <article class="t-card glass reveal" style="--d:160ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Amanda S.</div>
+                <div class="t-role">Real Estate Agent — Wellington</div>
+              </div>
+            </div>
+            <p class="t-quote">“The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!”</p>
+          </article>
+
+          <article class="t-card glass reveal">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Rachel J.</div>
+                <div class="t-role">CEO — Fiji Yacht Cruises</div>
+              </div>
+            </div>
+            <p class="t-quote">“Careful what you wish for working with John. He’ll have your business flying in a flash!”</p>
+          </article>
+
+          <article class="t-card glass reveal" style="--d:80ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Paul S.</div>
+                <div class="t-role">Risk Insurance</div>
+              </div>
+            </div>
+            <p class="t-quote">“I’ve invested 17k and my return was $110k. Super happy and just gets better year on year.”</p>
+          </article>
+
+          <article class="t-card glass reveal" style="--d:160ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Mike M.</div>
+                <div class="t-role">ACC Business Advice</div>
+              </div>
+            </div>
+            <p class="t-quote">“My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!”</p>
+          </article>
+
+          <!-- Additional “recent feedback” style testimonials (placeholders) -->
+          <article class="t-card glass reveal">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Matt Wineera</div>
+                <div class="t-role">Ray White (April 2022)</div>
+              </div>
+            </div>
+            <p class="t-quote">“You do have a good lead generation system and I do see the value in it.”</p>
+          </article>
+
+          <article class="t-card glass reveal" style="--d:80ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Cameron Hooper</div>
+                <div class="t-role">Ray White Papatoetoe (Feb 2021)</div>
+              </div>
+            </div>
+            <p class="t-quote">“Have purchased 3 leads over the past 2 days and have already booked in 3 in-person appraisals! Your scripts are awesome.”</p>
+          </article>
+
+          <article class="t-card glass reveal" style="--d:160ms">
+            <div class="t-top">
+              <div class="t-avatar" aria-hidden="true"></div>
+              <div>
+                <div class="t-name">Tony Pitiroi</div>
+                <div class="t-role">Ray White Wellington (Aug 2021)</div>
+              </div>
+            </div>
+            <p class="t-quote">“So far, I’ve spent $3,871 (79 leads) and my return been $110,446.”</p>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
         <div class="foot-top glass">
@@ -271,7 +332,8 @@ START: results.html
     </footer>
   </main>
 
-<script src="./script.js?v=20260113-04" defer></script></body>
+  <script src="./script.js?v=20260113-01" defer></script>
+</body>
 </html>
 <!-- =========================
 END: results.html
